--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f549c451dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1f9e3e2a10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f549cafc2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f549cafc4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f9dd7e2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f9dd77310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f549cd37c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f549cd37e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f9e5f5d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f9e5fed90&gt;]</pre>
 </div>
 
 </div>
