--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1f9e3e2a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3f295b9050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f9dd7e2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1f9dd77310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f28f812d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3f28f81510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f9e5f5d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1f9e5fed90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f29821c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3f29821e50&gt;]</pre>
 </div>
 
 </div>
