--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3f295b9050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa99772a590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f28f812d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3f28f81510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa997d973d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa997d975d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f29821c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3f29821e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa997fe6cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa997fe6ed0&gt;]</pre>
 </div>
 
 </div>
