--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efe452d6490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f774840a790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe45638050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe45638250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f77484cd2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f77484cd4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe4588a910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe4588ab10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7748d3fb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7748d3fd50&gt;]</pre>
 </div>
 
 </div>
