--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f774840a790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feaefa8fc50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f77484cd2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f77484cd4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feaef7e1450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feaef7e1650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7748d3fb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7748d3fd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feaf0052d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feaf0052f50&gt;]</pre>
 </div>
 
 </div>
