--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbe7faf3690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6b9e489f90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe7fb2e390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe7fb2e550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b9de89390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b9de89590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe803a1b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe803a1d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b9e6fec50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b9e6fee50&gt;]</pre>
 </div>
 
 </div>
