--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0bfa6d3250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4539443b90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0bfa9b5150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0bfa9b5350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45393d5fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4539401250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0bfaf68a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0bfaf68c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f453999e9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f453999ec10&gt;]</pre>
 </div>
 
 </div>
