--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa1b32e7c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f95fed77850&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1b35bf490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1b35bf690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95ff038f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f95ff0641d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1b3019410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1b3b72f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95ff600910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f95ff600b10&gt;]</pre>
 </div>
 
 </div>
