--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc2142e6a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f82e2ecfe90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2142b4090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc2142b4290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f82e2bb0210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f82e2bb0410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc214864a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc214864c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f82e3163b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f82e3163d10&gt;]</pre>
 </div>
 
 </div>
