--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f411dad3a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efd1ba35d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f411db03650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f411d7b3410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efd1b6fb290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efd1b6fb490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f411dd91d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f411dd55d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efd1bcb1b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efd1bcb1d90&gt;]</pre>
 </div>
 
 </div>
