--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efd1ba35d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1fef82be50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efd1b6fb290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efd1b6fb490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fef513150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1fef513350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efd1bcb1b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efd1bcb1d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fefab0ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1fefab0cd0&gt;]</pre>
 </div>
 
 </div>
