--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f67e6a41810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4db57db750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f67e66eff90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f67e671f1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4db579b110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4db579b310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f67e6cbd8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f67e6cbdad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4db5d32a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4db5d32c10&gt;]</pre>
 </div>
 
 </div>
