--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdf0a266ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7d9c6ec290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf0a26ef10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf0a2a5150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d9c9cc150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7d9c9cc350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf0a843790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf0a843990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d9cf7fa50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7d9cf7fc50&gt;]</pre>
 </div>
 
 </div>
