--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f34d1a28990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc235badcd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34d205e310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34d1d14390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc234ccc150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc234ccc350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34d22f5190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34d22a9d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc23527ba10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc23527bc10&gt;]</pre>
 </div>
 
 </div>
