--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42d1164ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5db169d90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f42d0e16fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f42d0e50210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5db700fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb5db737210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f42d13e8950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f42d13e8b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5dbcd4910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb5dbcd4b10&gt;]</pre>
 </div>
 
 </div>
