--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6030058fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f96c80f3690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f602fd2a190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f602fd2a390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f969c2b5050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f969c2b5250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f60302ddb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f60302ddd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f969c8649d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f969c864bd0&gt;]</pre>
 </div>
 
 </div>
