--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f96c80f3690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f733c653450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f969c2b5050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f969c2b5250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f733c5e5210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f733c5fe310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f969c8649d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f969c864bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f733cba5ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f733cbb0bd0&gt;]</pre>
 </div>
 
 </div>
