--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9074df1b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f96549406d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9074dab690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9074dab890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9654ed9790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9654f162d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f907534ef50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f907535a190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9655499050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f96554abb50&gt;]</pre>
 </div>
 
 </div>
