--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f188aeac550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbdd5e07d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f188b7b5a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f188b461390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdd610d050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbdd610d250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f188ba64a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f188ba10c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdd66a39d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbdd66a3bd0&gt;]</pre>
 </div>
 
 </div>
