--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcfa159a7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7338fd8a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfa186ee90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfa1886390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f73392c9190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f73392c9390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfa1e1d710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfa1e27d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7339873ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7339873cd0&gt;]</pre>
 </div>
 
 </div>
