--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7338fd8a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f93a21b5dd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f73392c9190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f73392c9390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93a24975d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93a24977d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7339873ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7339873cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93a2a3ae90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93a2a450d0&gt;]</pre>
 </div>
 
 </div>
