--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f43be793f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2d88bde950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f43be470110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f43be470310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d88ece110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2d88ece310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f43bea1fa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f43bea1fc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d8946c950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2d8946cb50&gt;]</pre>
 </div>
 
 </div>
